[gd_scene load_steps=7 format=3 uid="uid://djlg1po14eatp"]

[ext_resource type="Script" path="res://Scenes/StyleTest.gd" id="1_fg7xk"]
[ext_resource type="PackedScene" uid="uid://b16445g8mkbaa" path="res://PraxisMapper/FullOffline/FullSingleTile.tscn" id="2_xhfe6"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_yscx5"]
width = 320
height = 500

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_eqlhi"]
width = 320
height = 500

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_pwb55"]
width = 320
height = 500

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dablo"]
bg_color = Color(1, 0.313726, 0.45098, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="StyleTest" type="Node2D"]
script = ExtResource("1_fg7xk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1079.0
offset_bottom = 206.0
color = Color(0, 0.145098, 0.152941, 1)

[node name="Label" type="Label" parent="."]
offset_left = 467.0
offset_top = 7.0
offset_right = 541.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 30
text = "Style Test"

[node name="Label2" type="Label" parent="."]
offset_left = 25.0
offset_top = 62.0
offset_right = 1072.0
offset_bottom = 111.0
text = "Map data can be drawn with multiple styles, and custom styles can be made to fit your game. The same source data is drawn here in 3 styles. The third ignores most areas, and only draws tertiary roads and residential areas."
autowrap_mode = 3

[node name="FullTile" parent="." instance=ExtResource("2_xhfe6")]
position = Vector2(0, 205)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 21.0
offset_top = 360.0
offset_right = 341.0
offset_bottom = 860.0
texture = SubResource("NoiseTexture2D_yscx5")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 738.0
offset_top = 360.0
offset_right = 1058.0
offset_bottom = 860.0
texture = SubResource("NoiseTexture2D_eqlhi")

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 379.0
offset_top = 360.0
offset_right = 699.0
offset_bottom = 860.0
texture = SubResource("NoiseTexture2D_pwb55")

[node name="Label4" type="Label" parent="."]
offset_left = 738.0
offset_top = 300.0
offset_right = 1058.0
offset_bottom = 323.0
text = "Neon (Only roads and residential)"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="."]
offset_left = 379.0
offset_top = 300.0
offset_right = 699.0
offset_bottom = 323.0
text = "Inverted MapTiles"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 21.0
offset_top = 300.0
offset_right = 341.0
offset_bottom = 323.0
text = "OSM-style map tiles default"
horizontal_alignment = 1

[node name="btnClose" type="Button" parent="."]
offset_left = 786.0
offset_top = 138.0
offset_right = 977.0
offset_bottom = 176.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_dablo")
text = "Return to Main Scene"

[connection signal="button_down" from="btnClose" to="." method="Close"]
